fix bug & custom scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body, #root {
+  width:100%; 
+  max-height:100%;
+}
+::-webkit-scrollbar {
+  width: 2px;
+}
+::-webkit-scrollbar-thumb { 
+  background:gray;
+}
